fix horizontal scroll bar

--- a/julkalender/static/julkalender/style.css
+++ b/julkalender/static/julkalender/style.css
@@ -17,7 +17,7 @@ body {
   margin: 0;
   display: inline-flex;
   flex-direction: column;
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 img {
